# integrated_audit_suite

./: MANIFEST.in  README.md  pyproject.toml
integrated_audit_suite/: __init__.py  hooks.py  modules.txt
integrated_audit_suite/accounting_audit/doctype/accounting_audit_checklist/: accounting_audit_checklist.json  accounting_audit_checklist.py
integrated_audit_suite/config/: __init__.py  desktop.py
integrated_audit_suite/efqm/doctype/efqm_assessment/: efqm_assessment.json  efqm_assessment.py
integrated_audit_suite/iso_13053/doctype/iso_13053_project/: iso_13053_project.json  iso_13053_project.py
integrated_audit_suite/iso_34000/: risk_matrix.py
integrated_audit_suite/iso_34000/doctype/iso_34000_risk_item/: __init__.py  iso_34000_risk_item.json  iso_34000_risk_item.py
integrated_audit_suite/iso_9001/doctype/iso_9001_clause/: iso_9001_clause.json  iso_9001_clause.py
