[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "integrated-audit-suite"
version = "0.1.0"
description = "Integrated governance, risk, quality, and audit toolkit for ERPNext"
authors = [{name = "Community", email = "support@example.com"}]
readme = "README.md"
license = {file = "license.txt"}
dependencies = [
    "frappe>=15.0.0",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://example.com/integrated_audit_suite"
Source = "https://example.com/integrated_audit_suite.git"
